manifests/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: iot
  labels:
    app: iot
    tier: database
spec:
  selector:
    app: iot
    tier: database
  ports:
    - port: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: iot
  labels:
    app: iot
    tier: database
spec:
  selector:
    matchLabels:
      app: iot
      tier: database
  template:
    metadata:
      labels:
        app: iot
        tier: database
    spec:
      containers:
        - name: mongo
          image: mongo:4.2.3
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 500m
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /data/db
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: mongo
