manifests/mosquitto.yml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: iot
  labels:
    app: iot
    tier: mqtt-broker
spec:
  selector:
    app: iot
    tier: mqtt-broker
  ports:
    - port: 1883
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: iot
  labels:
    app: iot
    tier: mqtt-broker
spec:
  selector:
    matchLabels:
      app: iot
      tier: mqtt-broker
  template:
    metadata:
      labels:
        app: iot
        tier: mqtt-broker
    spec:
      containers:
        - name: mosquitto
          image: mmontes11/iot-mosquitto:3.1.0
          imagePullPolicy: Always
          resources:
            requests:
              memory: "32Mi"
              cpu: "75m"
            limits:
              memory: "64Mi"
              cpu: "125m"
          ports:
            - containerPort: 1883
