manifests/nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: iot
  labels:
    app: iot
    tier: reverse-proxy
spec:
  selector:
    app: iot
    tier: reverse-proxy
  type: NodePort
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: iot
  labels:
    app: iot
    tier: reverse-proxy
spec:
  selector:
    matchLabels:
      app: iot
      tier: reverse-proxy
  template:
    metadata:
      labels:
        app: iot
        tier: reverse-proxy
    spec:
      containers:
        - name: nginx
          image: mmontes11/iot-nginx:3.1.0
          imagePullPolicy: Always
          resources:
            requests:
              memory: "32Mi"
              cpu: "75m"
            limits:
              memory: "64Mi"
              cpu: "125m"
          ports:
            - containerPort: 80
