manifests/ingress.yml
kind: Service
apiVersion: v1
metadata:
  name: iot
  namespace: kube-system
  labels:
    app: iot
    tier: reverse-proxy
spec:
  type: ExternalName
  externalName: nginx.iot
  ports:
    - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: iot
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: iot
    tier: reverse-proxy
spec:
  rules:
    - host: iot.mmontes-dev.duckdns.org
      http:
        paths:
          - backend:
              serviceName: iot
              servicePort: 80
